--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/element-plus/dist/index.css">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/element-plus"></script>
+    <script src="https://unpkg.com/@element-plus/icons-vue"></script>
     <style>
         body {
             margin: 0;
@@ -96,6 +97,7 @@
 
     <script>
         const { createApp, ref } = Vue
+        import { FolderOpened, Connection, MagicStick, Plus, Document } from '@element-plus/icons-vue'
 
         const app = createApp({
             setup() {
@@ -174,12 +176,20 @@
                     connectServer,
                     askAI,
                     openDocs,
-                    addNewRow
+                    addNewRow,
+                    FolderOpened,
+                    Connection,
+                    MagicStick,
+                    Plus,
+                    Document
                 }
             }
         })
 
         app.use(ElementPlus)
+        for (const [key, component] of Object.entries(ElementPlusIconsVue)) {
+            app.component(key, component)
+        }
         app.mount('#app')
     </script>
 </body>
