--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 }
 
                 const openDocs = () => {
-                    window.location.href = './docs/index.html'
+                    window.location.href = './docs/index.md'
                 }
 
                 return {
